took out the north and south sync interrupts

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
+[env:atmega328]
 platform = atmelavr
-board = megaatmega2560
+board = atmega328
 framework = arduino
 lib_deps = 
 	
-	bitbucket-fmalpartida/LiquidCrystal@^1.5.0
+
 
 [platformio]
 description = The Stepper Controller
