--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = 
-	
-	bitbucket-fmalpartida/LiquidCrystal@^1.5.0
+lib_deps = arduino-libraries/LiquidCrystal@^1.0.7
 
 [platformio]
 description = The Stepper Controller
