--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 lib_deps = arduino-libraries/LiquidCrystal@^1.0.7
 
 [platformio]
-description = The Stepper Controller
+description = The Azimuth Encoder
