--- a/platformio.ini
+++ b/platformio.ini
@@ -7,12 +7,19 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+;
+;PK Note the four lines after framework = arduino were taken from the original PIO sketch which uploads and debugs without a programmer
+;just connect mega board to USB and specify the correct port below
 
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = arduino-libraries/LiquidCrystal@^1.0.7
+debug_tool = avr-stub
+debug_port = COM5
+lib_deps = 
+    jdolinay/avr-debugger@^1.1
+    arduino-libraries/LiquidCrystal@^1.0.7
 
 [platformio]
 description = The Azimuth Encoder
