added a full stop in pioini and commit from VSCode

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 ;
 ;PK Note the four lines after framework = arduino were taken from the original PIO sketch which uploads and debugs without a programmer
-;just connect mega board to USB and specify the correct port below
+;just connect mega board to USB and specify the correct port below.
 
 [env:megaatmega2560]
 platform = atmelavr
