--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,10 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 debug_tool = avr-stub
+upload_port = COM5
+monitor_port = COM5
 debug_port = COM5
+monitor_speed =19200
 lib_deps = 
     jdolinay/avr-debugger@^1.1
     arduino-libraries/LiquidCrystal@^1.0.7
