--- a/platformio.ini
+++ b/platformio.ini
@@ -11,18 +11,43 @@
 ;PK Note the four lines after framework = arduino were taken from the original PIO sketch which uploads and debugs without a programmer
 ;just connect mega board to USB and specify the correct port below.
 
-[env:megaatmega2560]
-platform = atmelavr
-board = megaatmega2560
-framework = arduino
-debug_tool = avr-stub
-upload_port = COM5
-monitor_port = COM5
-debug_port = COM5
-monitor_speed =19200
-lib_deps = 
-    jdolinay/avr-debugger@^1.1
-    arduino-libraries/LiquidCrystal@^1.0.7
+
+[env:ATmega4809]
+board               = ATmega4809
+platform            = atmelmegaavr
+framework           = arduino
+board_build.variant = 40pin-standard
+monitor_flags = 
+	--echo
+
+
+upload_protocol = custom
+upload_speed = 115200
+upload_port = COM12
+upload_flags = 
+    -d
+    atmega4809
+    -c
+    $UPLOAD_PORT
+    -b
+    $UPLOAD_SPEED
+upload_command = pyupdi $UPLOAD_FLAGS -f $SOURCE
+
+; Serial monitor baud rate
+monitor_speed = 19200
+
+;[env:megaatmega2560]
+;platform = atmelavr
+;board = megaatmega2560
+;framework = arduino
+;debug_tool = avr-stub
+;upload_port = COM12
+;monitor_port = COM12
+;debug_port = COM12
+;monitor_speed =19200
+;lib_deps = 
+;    jdolinay/avr-debugger@^1.1
+    
 
 [platformio]
-description = The Azimuth Encoder
+description = The integrated Azimuth Encoder
