--- a/platformio.ini
+++ b/platformio.ini
@@ -8,22 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 ;
-;PK Note the four lines after framework = arduino were taken from the original PIO sketch which uploads and debugs without a programmer
-;just connect mega board to USB and specify the correct port below.
-
 
 [env:ATmega4809]
 board               = ATmega4809
 platform            = atmelmegaavr
 framework           = arduino
 board_build.variant = 40pin-standard
+board_build.f_cpu   = 20000000L
+
 monitor_flags = 
 	--echo
 
 
 upload_protocol = custom
-upload_speed = 115200
-upload_port = COM12
+upload_speed    = 115200
+upload_port     = COM12
 upload_flags = 
     -d
     atmega4809
@@ -34,20 +33,9 @@ upload_flags =
 upload_command = pyupdi $UPLOAD_FLAGS -f $SOURCE
 
 ; Serial monitor baud rate
+monitor_port  = COM12
 monitor_speed = 19200
 
-;[env:megaatmega2560]
-;platform = atmelavr
-;board = megaatmega2560
-;framework = arduino
-;debug_tool = avr-stub
-;upload_port = COM12
-;monitor_port = COM12
-;debug_port = COM12
-;monitor_speed =19200
-;lib_deps = 
-;    jdolinay/avr-debugger@^1.1
-    
 
 [platformio]
 description = The integrated Azimuth Encoder
