--- a/platformio.ini
+++ b/platformio.ini
@@ -7,35 +7,29 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-;
 
 [env:ATmega4809]
-board               = ATmega4809
-platform            = atmelmegaavr
-framework           = arduino
+board = ATmega4809
+platform = atmelmegaavr
+framework = arduino
 board_build.variant = 40pin-standard
-board_build.f_cpu   = 20000000L
-
+board_build.f_cpu = 20000000L
 monitor_flags = 
 	--echo
-
-
 upload_protocol = custom
-upload_speed    = 115200
-upload_port     = COM12
+upload_speed = 115200
+upload_port = COM12
 upload_flags = 
-    -d
-    atmega4809
-    -c
-    $UPLOAD_PORT
-    -b
-    $UPLOAD_SPEED
+	-d
+	atmega4809
+	-c
+	$UPLOAD_PORT
+	-b
+	$UPLOAD_SPEED
 upload_command = pyupdi $UPLOAD_FLAGS -f $SOURCE
-
-; Serial monitor baud rate
-monitor_port  = COM12
+monitor_port = COM12
 monitor_speed = 19200
-
+lib_deps = qub1750ul/SoftwareReset@^3.0.0
 
 [platformio]
 description = The integrated Azimuth Encoder
