Included an led flash on reset function - only visible if the box lid is off!
Removed some test lines indicated by todo.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ monitor_flags =
 	--echo
 upload_protocol = custom
 upload_speed = 115200
-upload_port = COM12
+upload_port = COM4
 upload_flags = 
 	-d
 	atmega4809
@@ -27,9 +27,25 @@ upload_flags =
 	-b
 	$UPLOAD_SPEED
 upload_command = pyupdi $UPLOAD_FLAGS -f $SOURCE
-monitor_port = COM12
+monitor_port = COM4
 monitor_speed = 19200
 lib_deps = qub1750ul/SoftwareReset@^3.0.0
+
+
+;upload_protocol = custom
+;upload_speed = 115200
+;upload_port = COM4
+;upload_flags =
+;  -t
+;  uart
+;  -d
+;  $BOARD_MCU
+;  -u
+;  $UPLOAD_PORT
+;  -c
+;  $UPLOAD_SPEED
+;upload_command =  pymcuprog write $UPLOAD_FLAGS -f $SOURCE
+
 
 [platformio]
 description = The integrated Azimuth Encoder
