--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,7 @@
 ; PlatformIO Project Configuration File
+
+; pymcuprog command line in case of pyupdi failre:
+;   pymcuprog write -d atmega4809 -t uart -u COM6 -c 250k -f .pio\build\ATmega4809\firmware.hex
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
