--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,8 @@ platform = atmelmegaavr
 framework = arduino
 board_build.variant = 40pin-standard
 board_build.f_cpu = 20000000L
-monitor_flags = 
-	--echo
+;monitor_flags = 
+;	--echo
 upload_protocol = custom
 upload_speed = 115200
 upload_port = COM6
